# ethereum-trading-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  ENV_CONFIG.md  README.md  test-mcp.sh
doc/: requirement.txt
src/: config.rs  erc20.rs  eth_client.rs  logging.rs  main.rs  token_registry.rs  types.rs  uniswap.rs
src/tools/: balance.rs  mod.rs  price.rs  swap.rs
