[package]
name = "ethereum-trading-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
ethers = { version = "2.0.14", features = ["rustls", "ws"] }
rmcp = { version = "0.8.3", features = ["server", "transport-io", "macros"] }
rust_decimal = "1.39.0"
schemars = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

[[bin]]
name = "ethereum-trading-server"
path = "src/main.rs"
